--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 				</a>
 				<nav>
 					<ul>
-						<li><a href="">Home</a></li>
+						<li><a href="">john</a></li>
 						<li><a href="">Books</a></li>
-						<li><a href="">Blog</a></li>
+						<li><a href="">john</a></li>
 						<li><a href="">Features</a></li>
-						<li><a href="">Shop</a></li>
+						<li><a href="">john</a></li>
 						<li><a href="">About Us</a></li>
 					</ul>
 				</nav>
